# local-image-search

./: .gitignore  README.md  pyproject.toml
raycast/local-image-search/: README.md  package-lock.json  package.json  raycast-env.d.ts  tsconfig.json
raycast/local-image-search/src/: search-images.tsx  server.ts
src/local_image_search/: __init__.py  __main__.py  captioning.py  cli.py  clip.py  config.py  db.py  embeddings.py  index_service.py  metrics.py  models.py  scanner.py  search.py  search_service.py  server.py  thumbnails.py
tests/: test_captioning.py  test_db.py  test_scanner.py  test_search.py  test_server.py  test_thumbnails.py
