[project]
name = "local-image-search"
version = "0.1.0"
description = "Local-first semantic image search for macOS and Raycast."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "numpy>=1.26",
  "pillow>=10.0",
]

[project.optional-dependencies]
ml = [
  "moondream>=0.0.6",
  "sentence-transformers>=3.0",
]
heic = [
  "pillow-heif>=0.16",
]
dev = [
  "pytest>=8.0",
  "ruff>=0.5",
]

[project.scripts]
image-search = "local_image_search.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/local_image_search"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.pytest.ini_options]
testpaths = ["tests"]
